# falling-blocks-cam

./: .gitignore  CMakeLists.txt  README.md  runbuild.sh
assets/shaders/: StandardShading.fragmentshader
src/: main.cpp
src/common/: Logger.h  SharedState.cpp  SharedState.h
src/game/: Box.h  Bullet.h  Controller.h  GameObject.h  Graphics.cpp  Graphics.h  Player.h  game.cpp  game.h
src/input/: FaceDetector.cpp  FaceDetector.h  input.cpp  input.h
src/utils/: Model.h  controls.cpp  objloader.cpp  objloader.hpp  texture.cpp  texture.hpp
